# unnamed-game

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
assets/shaders/: shader.vert  testF.glsl  testV.glsl
game/: CMakeLists.txt
game/src/: main.cpp  main_opengl.cpp  main_vulkan.cpp
uranium/: CMakeLists.txt
uranium/include/uranium/core/: Api.hpp  App.hpp  AppEntry.hpp  IDisplay.hpp  IMonitor.hpp  Logger.hpp  Types.hpp  Utils.hpp
uranium/include/uranium/event/: DynamicEventManager.hpp  EventDispatcher.hpp  IEvent.hpp
uranium/include/uranium/platform/: Platform.hpp
uranium/include/uranium/platform/windows/: OpenGLApp.hpp  OpenGLDisplay.hpp  WindowsDisplay.hpp
uranium/src/core/: App.cpp  IDisplay.cpp  IMonitor.cpp  Logger.cpp
uranium/src/event/: DynamicEventManager.cpp  EventDispatcher.cpp
uranium/src/platform/windows/: OpenGLApp.cpp  OpenGLDisplay.cpp  WindowsDisplay.cpp
